--- a/src/Application/resources/FXML Files/MultipleChoiceGameMenu.fxml
+++ b/src/Application/resources/FXML Files/MultipleChoiceGameMenu.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="myGamePausedVBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.MultipleChoiceGamePausedController">
+<VBox fx:id="myGamePausedVBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.MultipleChoiceGamePausedController">
    <children>
       <Label fx:id="gamePausedLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="120.0" prefWidth="600.0" text="Game Paused" VBox.vgrow="ALWAYS">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <Label fx:id="scoreLabel" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="600.0" text="Highest Score" VBox.vgrow="ALWAYS" />
+      <Label fx:id="scoreLabel" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="600.0" text="Highest Score" textAlignment="CENTER" VBox.vgrow="ALWAYS" />
       <HBox prefHeight="38.0" prefWidth="440.0" VBox.vgrow="NEVER">
          <children>
             <Button fx:id="mainMenuButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#backToGameMainMenu" prefWidth="50.0" text="Main menu" HBox.hgrow="ALWAYS">
