--- a/src/Application/resources/FXML Files/FXML.fxml
+++ b/src/Application/resources/FXML Files/FXML.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="924.0" stylesheets="@../CSS%20Styles/nord-dark.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.SceneController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="924.0" stylesheets="@../CSS%20Styles/nord-dark.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.SceneController">
    <children>
       <TabPane prefHeight="568.0" prefWidth="756.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
          <tabs>
@@ -141,7 +141,7 @@
                         </Button>
                         <ScrollPane fx:id="scrollPane2" hbarPolicy="NEVER" prefHeight="433.0" prefWidth="735.0" VBox.vgrow="ALWAYS">
                            <content>
-                              <VBox prefHeight="434.0" prefWidth="729.0" />
+                              <VBox fx:id="tab1DefinitionVBox" prefHeight="434.0" prefWidth="729.0" />
                            </content></ScrollPane>
                      </children>
                   </VBox>
