--- a/src/Application/resources/FXML Files/MemoryCardGame.fxml
+++ b/src/Application/resources/FXML Files/MemoryCardGame.fxml
@@ -8,52 +8,52 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="myBorderPane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.MemoryCardGameController">
-   <center>
-      <GridPane fx:id="myGridPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="512.0" prefWidth="709.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
-   </center>
-   <top>
-      <VBox fx:id="myVBox" prefHeight="74.0" prefWidth="710.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="pauseButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#showPausedMenu" prefHeight="42.0" prefWidth="710.0" text="Pause" VBox.vgrow="ALWAYS" />
-            <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="42.0" prefWidth="710.0" VBox.vgrow="ALWAYS">
+<StackPane fx:id="myStackPane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.MemoryCardGameController">
+   <children>
+      <BorderPane fx:id="myBorderPane">
+         <center>
+            <GridPane fx:id="myGridPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="512.0" prefWidth="709.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </center>
+         <top>
+            <VBox fx:id="myVBox" prefHeight="74.0" prefWidth="710.0" BorderPane.alignment="CENTER">
                <children>
-                  <FlowPane alignment="CENTER" HBox.hgrow="ALWAYS">
+                  <Button fx:id="pauseButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#showPausedMenu" prefHeight="42.0" prefWidth="710.0" text="Pause" VBox.vgrow="ALWAYS" />
+                  <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="42.0" prefWidth="710.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <Label fx:id="livesLabel" alignment="CENTER" prefHeight="38.0" prefWidth="236.0" text="Lives : " textAlignment="JUSTIFY" />
+                        <FlowPane alignment="CENTER" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label fx:id="timeLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" prefHeight="30.0" prefWidth="310.0" text="Remaining time : " />
+                           </children>
+                        </FlowPane>
+                        <FlowPane alignment="CENTER" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label fx:id="scoreLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" prefHeight="34.0" prefWidth="291.0" text="Score : " textAlignment="JUSTIFY" />
+                           </children>
+                        </FlowPane>
                      </children>
-                  </FlowPane>
-                  <FlowPane alignment="CENTER" HBox.hgrow="ALWAYS">
-                     <children>
-                        <Label fx:id="timeLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" prefHeight="29.0" prefWidth="164.0" text="Remaining time : " textAlignment="JUSTIFY" />
-                     </children>
-                  </FlowPane>
-                  <FlowPane alignment="CENTER" HBox.hgrow="ALWAYS">
-                     <children>
-                        <Label fx:id="scoreLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" prefHeight="34.0" prefWidth="173.0" text="Score : " textAlignment="JUSTIFY" />
-                     </children>
-                  </FlowPane>
+                  </HBox>
                </children>
-            </HBox>
-         </children>
-      </VBox>
-   </top>
-</BorderPane>
+            </VBox>
+         </top>
+      </BorderPane>
+   </children>
+</StackPane>
