--- a/src/Application/resources/FXML Files/MemoryGameMenu.fxml
+++ b/src/Application/resources/FXML Files/MemoryGameMenu.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.FlowPane?>
@@ -32,6 +33,11 @@
                   <Insets top="20.0" />
                </FlowPane.margin>
             </Button>
+         </children>
+      </FlowPane>
+      <FlowPane alignment="CENTER">
+         <children>
+            <Slider prefHeight="47.0" prefWidth="194.0" showTickLabels="true" />
          </children>
       </FlowPane>
       <HBox prefHeight="38.0" prefWidth="440.0" VBox.vgrow="NEVER">
