--- a/src/Application/resources/FXML Files/MemoryCardGame.fxml
+++ b/src/Application/resources/FXML Files/MemoryCardGame.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="myStackPane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.MemoryCardGameController">
+<StackPane fx:id="myStackPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.MemoryCardGameController">
    <children>
       <BorderPane fx:id="myBorderPane">
          <center>
@@ -50,7 +50,7 @@
                         </FlowPane>
                         <FlowPane alignment="CENTER" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label fx:id="scoreLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" prefHeight="34.0" prefWidth="291.0" text="Score : " textAlignment="JUSTIFY" />
+                              <Label fx:id="scoreLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" prefHeight="34.0" prefWidth="291.0" text="Score : 0/10" textAlignment="JUSTIFY" />
                            </children>
                         </FlowPane>
                      </children>
