--- a/src/Application/resources/FXML Files/MultipleChoiceGame.fxml
+++ b/src/Application/resources/FXML Files/MultipleChoiceGame.fxml
@@ -11,15 +11,26 @@
    <children>
       <FlowPane alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="146.0" VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="gamePauseButton" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#showPausedMenu" prefHeight="40.0" prefWidth="73.0" text="Pause" />
-            <Label fx:id="scoreLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" prefHeight="40.0" prefWidth="100.0" text="Score: " textAlignment="CENTER">
-               <FlowPane.margin>
-                  <Insets left="15.0" />
-               </FlowPane.margin>
-            </Label>
-            <Label fx:id="livesLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" prefHeight="40.0" prefWidth="94.0" text="Lives: " />
+            <Button fx:id="gamePauseButton" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#showPausedMenu" prefHeight="40.0" prefWidth="600.0" text="Pause" />
          </children>
       </FlowPane>
+      <HBox prefHeight="36.0" prefWidth="600.0" VBox.vgrow="NEVER">
+         <children>
+            <Label fx:id="livesLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="40.0" prefWidth="80.0" text="Lives: " HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </Label>
+            <Label fx:id="scoreLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="40.0" prefWidth="80.0" text="Score: " textAlignment="CENTER" HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </HBox>
       <FlowPane fx:id="myFlowPane" alignment="CENTER" prefHeight="234.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
          <children>
             <Label fx:id="questionLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="162.0" prefWidth="481.0" text="Who is the most handsome person on earth?" textAlignment="JUSTIFY" wrapText="true" />
