Chỉnh sửa game info, fix bug update.

--- a/src/Application/resources/FXML Files/FXML.fxml
+++ b/src/Application/resources/FXML Files/FXML.fxml
@@ -277,12 +277,14 @@
                               <Button fx:id="selectGameButton1" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#switchToGame1" prefWidth="20.0" text="Multiple Choice Game" textAlignment="CENTER" wrapText="true" HBox.hgrow="ALWAYS" />
                               <VBox fx:id="infoGameVBox" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                                  <children>
+                                    <Label fx:id="gameName1" alignment="BOTTOM_CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="345.0" text="Multiple Choice Game" textAlignment="CENTER" VBox.vgrow="ALWAYS" />
                                     <Label fx:id="infoGame1" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Label" textAlignment="JUSTIFY" VBox.vgrow="ALWAYS">
                                        <VBox.margin>
                                           <Insets left="2.0" right="2.0" />
                                        </VBox.margin>
                                     </Label>
                                     <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" />
+                                    <Label fx:id="gameName3" alignment="BOTTOM_CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="345.0" text="Memory Game" textAlignment="CENTER" />
                                     <Label fx:id="infoGame3" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Label" textAlignment="JUSTIFY" VBox.vgrow="ALWAYS">
                                        <VBox.margin>
                                           <Insets left="2.0" right="2.0" />
