--- a/src/Application/resources/FXML Files/MemoryGameStartMenu.fxml
+++ b/src/Application/resources/FXML Files/MemoryGameStartMenu.fxml
@@ -18,7 +18,7 @@
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </VBox.margin>
       </Label>
-      <TextField fx:id="playerNameField" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Not longer than 9 charaters." VBox.vgrow="ALWAYS">
+      <TextField fx:id="playerNameField" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Not longer than 9 characters." VBox.vgrow="ALWAYS">
          <VBox.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" />
          </VBox.margin>
